<resources>
    <string name="app_name">Wallapoop</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="server_url">http://diegosanstr.ddns.net</string>
    <string name="server_login">:5000/login</string>
    <string name="server_products">:5001/products</string>

    <string name="server_token">token</string>
    <string name="user_id">userID</string>

    <string name="hint_user">Usuario</string>
    <string name="hint_pass">Contraseña</string>
    <string name="hint_email">Email</string>

    <string name="hint_product_name">Producto</string>
    <string name="hint_product_price">Precio</string>
    <string name="hint_product_desc">Descripción</string>

    <string name="snackbar_publish_msg">Es necesario rellenar los campos</string>


    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

</resources>
